--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from "@/components/Navbar";
+import Footer from "@/components/Footer.astro";
 import "../styles/global.css";
 
 const { title } = Astro.props;
@@ -20,6 +21,7 @@ const { title } = Astro.props;
 	<body class="bg-accent relative">
 		<Navbar client:load/>
 		<slot/>
+		<Footer />
 		<script src="https://cdn.jsdelivr.net/npm/sienna-accessibility@latest/dist/sienna-accessibility.umd.js" defer></script>
 		<!-- <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script> -->
 	</body>
